FIXED: Took out overflow from piles css. Added in a static postion for the dropdowns. This allows the dropdown menu to be seen without a scroll bar.

--- a/saas_cardservice/app/assets/stylesheets/home.scss
+++ b/saas_cardservice/app/assets/stylesheets/home.scss
@@ -20,8 +20,6 @@
   border-radius: 25px;
   vertical-align: middle;
   text-align: center;
-  overflow-x: auto;
-  overflow-y: hidden;
 }
 
 .pile {
